--- a/WebContent/sheet.css
+++ b/WebContent/sheet.css
@@ -35,6 +35,12 @@
 	margin-bottom: 15px;
 }
 
+.systemMessage{
+	text-align: center;
+	width: 100%;
+	margin-bottom: 15px;
+}
+
 ::-webkit-scrollbar {
     background: white; 
 }
